# CrashLoggerSSE

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc  CMakeLists.txt  CMakePresets.json  CrashLogger.code-workspace  Debug-Tests.ppj  Debug.ppj  README.md  Release.ppj  vcpkg-configuration.json  vcpkg.json
.claude/: CLAUDE.md
.github/workflows/: build-reusable.yml  build.yml  build_cmake.yml  check-nexus.yml  pr-test.yml  refresh-nexus-cron.yml  refresh-nexus.yml  refresh-unex-nexusmods.yml  release.yml  semantic_release.yml  unex-check.yml  upload_nexus.yml
cmake/: FindOpenVR.cmake  Plugin.h.in  PluginInfo.h.in  archive_artifacts.cmake
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
cmake/ports/vmaware/: portfile.cmake  vcpkg.json
contrib/Distribution/Config/: CrashLogger.ini  CrashLogger.yaml
scripts/: archive_artifacts.py  package_skyrim_pdbs.py
src/: CMakeLists.txt  Config.cpp  Config.h  PCH.cpp  PCH.h  Settings.cpp  Settings.h  main.cpp
src/Crash/: Analysis.cpp  Analysis.h  CommonHeader.cpp  CommonHeader.h  CppException.cpp  CppException.h  CrashHandler.cpp  CrashHandler.h  CrashTests.cpp  CrashTests.h  Introspection.cpp  ProblematicModules.cpp  ProblematicModules.h  ThreadDump.cpp  ThreadDump.h
src/Crash/Introspection/: HeapAnalysis.cpp  HeapAnalysis.h  Introspection.cpp  Introspection.h  RelevantObjectsSimplifier.cpp  RelevantObjectsSimplifier.h
src/Crash/Modules/: ModuleHandler.cpp  ModuleHandler.h
src/Crash/PDB/: PdbHandler.cpp  PdbHandler.h
tools/diaprobe/: .gitignore  README.md  probe.cpp
